--- a/FlickerBrowser/gradle/wrapper/gradle-wrapper.properties
+++ b/FlickerBrowser/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Apr 30 20:37:51 BST 2020
+#Tue Nov 28 10:36:57 ACDT 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
